<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_assessment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_assessment_title"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_assessment_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_assessment_start_date"
        android:inputType="date"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_assessment_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_assessment_end_date"
        android:inputType="date"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_assessment_course_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_assessment_course_id"
        android:inputType="text"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/edit_assessment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp">

        <RadioButton
            android:id="@+id/performanceType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Performance Assessment" />

        <RadioButton
            android:id="@+id/objectiveType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Objective Assessment" />
    </RadioGroup>

    <TextView
        android:id="@+id/assessmentAlertText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="You will recieve automatic alerts for start/end dates."
        android:paddingLeft="16dp"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/big_padding"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/colorAccent" />

</LinearLayout>
</ScrollView>